--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,3 +6,17 @@ services:
     ports:
       - "80:80"
     restart: always
+
+  db:
+    image: postgres:16
+    volumes:
+      - db_data_prod:/var/lib/postgresql/data
+      - ./db/init-prod.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      POSTGRES_DB: smartroomdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    restart: always
+
+volumes:
+  db_data_prod:
