--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Frontend
-frontend/node_modules
-frontend/dist
-frontend/package-lock.json
+node_modules
+dist
+package-lock.json
 
-# System files
 .DS_Store
 Thumbs.db
