--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,17 +1,4 @@
 services:
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    ports:
-      - "5173:5173"
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    restart: always
-
   db:
     image: postgres:16
     volumes:
@@ -23,6 +10,37 @@ services:
       POSTGRES_DB: smartroomdb
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/smartroomdb?schema=public
+      - CHOKIDAR_USEPOLLING=true
+    restart: always
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    depends_on:
+      - backend
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    restart: always
 
 volumes:
   db_data_dev:
