--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,45 @@ services:
   db:
     image: postgres:16
     volumes:
-      - db_data_prod:/var/lib/postgresql/data
-      - ./db/init-prod.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_data_dev:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: smartroomdb
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    restart: always
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
     depends_on:
       - db
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/smartroomdb?schema=public
+      - CHOKIDAR_USEPOLLING=true
     restart: always
 
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     ports:
-      - "80:80"
+      - "5173:5173"
     depends_on:
       - backend
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     restart: always
 
 volumes:
-  db_data_prod:
+  db_data_dev:
